--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -5,8 +5,7 @@
       "distributionName": ""
     },
     "Профиль 1": {
-      "commandName": "Project",
-      "commandLineArgs": "no valid arguments"
+      "commandName": "Project"
     }
   }
 }
